[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repomosaic"
version = "0.4.0"
description = "Generate a call graph and skill map from a repository"
authors = [
    { name = "RepoMosaic Developers", email = "you@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=3.0",
]

[project.scripts]
repomosaic = "repomosaic.cli:run"
